docs: record the CI coverage inventory and the E2E tag assessment
docs/TESTING.md gains a "CI 门禁实际覆盖" section: the gate matrix (what each workflow
really excludes and runs), the pass/fail semantics (Maven exit code is authoritative,
JaCoCo now really runs, --max-failures, the final gate steps), and the known gaps -
the E2E/E2ETest suite nobody executes, the sparse tag annotations, the six plugin
modules that inherit browser4-pdk and therefore never see the quality-gate profile, the
surefire include patterns, and the fact that surefire.excludes=**integration** only
matches lowercase paths. The non-existent -DrunSDKTests=true property is gone.

New docs-dev/copilot/e2e-tag-stability-assessment.md inventories the ten E2E-tagged
classes (what each needs, what blocks it), reports two local sampling rounds
(56 cases, 0 failures; HtmlSnapshotScenariosE2ETest 33 cases in 481 s then 388 s,
StorageStateCookiePathE2ETest 41 s, SwarmControllerE2ETest 3 s,
Browser4MCPServerE2ETest 14 cases in 2.8 s), and concludes: do not lift the tag
exclusion in nightly (only four classes would start running, three of them Spring +
real Chrome, one 6.5-8 minutes); instead re-tag the mock-based Browser4MCPServerE2ETest
as Unit+Fast and give the three browser classes an on-demand job to observe on CI first.

The stabilization log gains section 30 (the false-green reconcile, the dead JaCoCo
wiring, the two modules it exposed, and the three-round measurement) and section 31
(ci.yml no longer failing early, the tag classification, and the E2E assessment).
AGENTS.md's gate table now describes the exit-code semantics, the final gate steps and
the new --max-failures flag, and its Common Issues table has an entry for "JaCoCo
reports empty / coverage floor never trips".